syntax = "proto3";

import "common.proto";


message Response {
    oneof data {
        GetResponse get = 1;
        InsertResponse insert = 2;
        DeleteResponse delete = 3;
        BatchResponse batch = 4;
        ClientError client_error = 5;
        ServerError server_error = 6;
    }
}


message GetResponse {
    string hash_key = 1;
    Value sort_key = 2;
    repeated Value values = 3;
    string table = 4;
}

message InsertResponse {
    bool okay = 1;
}

message DeleteResponse {
    bool okay = 1;
}

message BatchResponse {
    repeated BatchResponseItem items = 1;
}


message BatchResponseItem {
    oneof item {
        GetResponse get = 1;
        InsertResponse insert = 2;
        DeleteResponse delete = 3;
    }
}


message ClientError {
    string detail = 1;
}

message ServerError {
    string detail = 1;
}